--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Voice Agents for Business | Vocalytics</title>
-    <meta name="description" content="24/7 AI voice agents that book appointments, qualify leads, and handle calls with human-level quality. Increase conversions by 31% with enterprise-grade voice AI." />
-    <meta name="author" content="Vocalytics" />
 
-    <meta property="og:title" content="AI Voice Agents for Business | Vocalytics" />
-    <meta property="og:description" content="24/7 AI voice agents that book appointments, qualify leads, and handle calls with human-level quality. Increase conversions by 31% with enterprise-grade voice AI." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Build Beyond AI</title>
+  <meta name="description"
+    content="24/7 AI voice agents that book appointments, qualify leads, and handle calls with human-level quality. Increase conversions by 31% with enterprise-grade voice AI." />
+  <meta name="author" content="Vocalytics" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@vocalytics" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta property="og:title" content="AI Voice Agents for Business | Vocalytics" />
+  <meta property="og:description"
+    content="24/7 AI voice agents that book appointments, qualify leads, and handle calls with human-level quality. Increase conversions by 31% with enterprise-grade voice AI." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@vocalytics" />
+  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
