--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <meta property="og:description"
     content="24/7 AI voice agents that book appointments, qualify leads, and handle calls with human-level quality. Increase conversions by 31% with enterprise-grade voice AI." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:image" content="/public/images/logo.svg" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@vocalytics" />
-  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta name="twitter:site" content="@buildbeyondai" />
+  <meta name="twitter:image" content="/public/images/logo.svg" />
 </head>
 
 <body>
